hello-python-deployment.yaml
# hello-python.yaml

# 1. Deployment da Aplicação Python
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python-deployment
  namespace: azure-store-1758905293727
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python-container
        image: clusterk8sregistry.azurecr.io/hello-python:latest 
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"  # Base para o HPA: 10% de um núcleo
            memory: "128Mi"
          limits:
            cpu: "500m"  # Limite máximo de CPU permitido
            memory: "256Mi"

        volumeMounts:
          - name: gcp-key-volume
            mountPath: "/var/secrets/gcp"
            readOnly: true

      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-svc-key
          items:
            - key: gcp-service-account.json
              path: gcp-service-account.json
