hello-python-app.yaml
# =================================================================
# 1. DEPLOYMENT (Aplicação + Cloud SQL Proxy)
# =================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python-app
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      terminationGracePeriodSeconds: 10

      containers:
        # ---------------------------------------------------------
        # 1. APP Python
        # ---------------------------------------------------------
        - name: hello-python-container
          image: clusterk8sregistry.azurecr.io/hello-python:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          volumeMounts:
            - name: gcp-key-volume
              mountPath: "/var/secrets/gcp"
              readOnly: true

          # --- READINESS PROBE CORRIGIDA ---
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

        # ---------------------------------------------------------
        # 2. Cloud SQL Proxy (sidecar)
        # ---------------------------------------------------------
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.7
          command:
            - "/cloud_sql_proxy"
            - "-instances=telemetria-rumo-9ccc4:us-central1:grafana-server-harpia=tcp:3306"
            - "-credential_file=/secrets/cloudsql/gcp-service-account.json"
          volumeMounts:
            - name: cloudsql-secret
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: gcp-key-volume
          secret:
            secretName: gcp-svc-key
            items:
              - key: gcp-service-account.json
                path: gcp-service-account.json

        - name: cloudsql-secret
          secret:
            secretName: cloudsql-sa
            items:
              - key: credentials.json
                path: gcp-service-account.json


# =================================================================
# 2. SERVICE
# =================================================================
---
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
  namespace: ingress-basic
spec:
  selector:
    app: hello-python
  ports:
    - protocol: TCP
      port: 80        # Porta vista pelo Ingress
      targetPort: 8080 # Porta exposta no container Python
