hello-python-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python-ingress
  annotations:
    # 1. Anotação legada para compatibilidade, embora ingressClassName seja preferida.
    kubernetes.io/ingress.class: nginx 

    # 2. **ATIVAÇÃO:** Anotação para o Cert-Manager
    # Diz ao cert-manager para usar o ClusterIssuer que criamos.
    cert-manager.io/cluster-issuer: letsencrypt-prod

    # 3. **ATIVAÇÃO:** Força o NGINX a redirecionar HTTP (porta 80) para HTTPS (porta 443).
    # Esta anotação deve estar ativa para garantir a segurança da comunicação.
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    
    # 4. Anotação Azure (Geralmente não é necessária se você instalou o NGINX via Helm/Add-on)
    #service.beta.kubernetes.io/azure-load-balancer-inbound-nat-rules: '[{"protocol": "tcp", "backendPort": 80, "frontendPort": 80}, {"protocol": "tcp", "backendPort": 443, "frontendPort": 443}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python-container
        image: clusterk8sregistry.azurecr.io/hello-python:latest 
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"  # Base para o HPA: 10% de um núcleo
            memory: "128Mi"
          limits:
            cpu: "500m"  # Limite máximo de CPU permitido
            memory: "256Mi"

        volumeMounts:
          - name: gcp-key-volume
            mountPath: "/var/secrets/gcp"
            readOnly: true

      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-svc-key
          items:
            - key: gcp-service-account.json
            
---
apiVersion: v1
kind: Service
metadata:
  name: hello-python-ingress
  namespace: ingress
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080  # Porta do container
    protocol: TCP
  selector:
    app: hello-python-ingress
