hello-world-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - hello-python-aks.duckdns.org
  #   secretName: tls-secret
  rules:
  - host: hello-python-aks.duckdns.org
    http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      # - path: /(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: aks-helloworld-one
      #       port:
      #         number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - hello-python-aks.duckdns.org
  #   secretName: tls-secret
  rules:
  - host: hello-python-aks.duckdns.org
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port: 
              number: 80
